Much improved New Scala Project Wizard derived from the JDTs New Java Project Wizard. Fixes 2519, 2520 and 2703.
git-svn-id: http://lampsvn.epfl.ch/svn-repos/scala/scala-plugin/trunk@21090 5e8d7ff9-d8ef-0310-90f0-a4852d11357a

--- a/plugin.xml
+++ b/plugin.xml
@@ -155,7 +155,7 @@
             name="Scala Wizards"/>
       <wizard
             icon="icons/full/etool16/newsprj_wiz.gif"
-            class="scala.tools.eclipse.wizards.NewProjectWizard"
+            class="scala.tools.eclipse.wizards.ScalaProjectWizard"
             finalPerspective="ch.epfl.lamp.sdt.core.perspective"
             category="ch.epfl.lamp.sdt.core.wizards"
             project="true"
