Fixed #3168. Also made AspectJ less chatty by default and temporarily removed elideLevel option. Review by community.
git-svn-id: http://lampsvn.epfl.ch/svn-repos/scala/scala-plugin/trunk@21191 5e8d7ff9-d8ef-0310-90f0-a4852d11357a

--- a/plugin.xml
+++ b/plugin.xml
@@ -260,7 +260,7 @@
            modes="run, debug"
            name="Scala Application"
            public="true"
-           sourceLocatorId="scala.tools.eclipse.launching.ScalaSourceLookupDirector"
+           sourceLocatorId="org.eclipse.jdt.launching.sourceLocator.JavaSourceLookupDirector"
            sourcePathComputerId="org.eclipse.jdt.launching.sourceLookup.javaSourcePathComputer">
      </launchConfigurationType>
      <launchConfigurationType
@@ -269,17 +269,10 @@
            delegateName="Scala Interpreter Launcher"
            delegateDescription="The Scala Interpreter launcher supports running and debugging code through a Read-Eval-Print loop"
            modes="run,debug"
-           sourceLocatorId="scala.tools.eclipse.launching.ScalaSourceLookupDirector"
+           sourceLocatorId="org.eclipse.jdt.launching.sourceLocator.JavaSourceLookupDirector"
            sourcePathComputerId="org.eclipse.jdt.launching.sourceLookup.javaSourcePathComputer"
            name="Scala Interpreter">
      </launchConfigurationType>
-   </extension>
-   <extension point="org.eclipse.debug.core.sourceLocators">
-      <sourceLocator
-        id="scala.tools.eclipse.launching.ScalaSourceLookupDirector"
-        class="scala.tools.eclipse.launching.ScalaSourceLookupDirector"
-        name="Scala Source Locator">
-      </sourceLocator>
    </extension>
    <extension point="org.eclipse.debug.ui.launchConfigurationTypeImages">
      <launchConfigurationTypeImage
