Updated for Tycho build.

--- a/org.scala-ide.sdt.aspects/.project
+++ b/org.scala-ide.sdt.aspects/.project
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>scala-plugin-aspects</name>
+	<name>org.scala-ide.sdt.aspects</name>
 	<comment></comment>
 	<projects>
 	</projects>
