--- a/org.scala-ide.sdt.aspects/build.properties
+++ b/org.scala-ide.sdt.aspects/build.properties
@@ -1,4 +1,7 @@
 source.. = src/
-bin.includes = META-INF/,\
-               .,\
-               plugin.xml
+output.. = bin/
+bin.includes = \
+META-INF/,\
+.,\
+*.exsd,\
+plugin.xml,\
