--- a/org.scala-ide.scala.compiler/pom.xml
+++ b/org.scala-ide.scala.compiler/pom.xml
@@ -6,7 +6,7 @@
     <groupId>org.scala-ide</groupId>
     <artifactId>scala-toolchain-for-eclipse</artifactId>
     <version>2.8.0-RC6</version>
-    <relativePath>../toolchain-pom.xml</relativePath>
+    <relativePath>../org.scala-ide.build/toolchain-pom.xml</relativePath>
   </parent>
   <artifactId>org.scala-ide.scala.compiler</artifactId>
   <packaging>bundle</packaging>
