--- a/org.scala-ide.sdt.core/pom.xml
+++ b/org.scala-ide.sdt.core/pom.xml
@@ -14,7 +14,7 @@
     <dependency>
       <groupId>org.scala-ide</groupId>
       <artifactId>org.scala-ide.sdt.aspects</artifactId>
-      <version>${scala.ide.version}</version>
+      <version>${project.version}</version>
     </dependency>
     <dependency>
       <groupId>org.scala-ide</groupId>
