--- a/org.scala-ide.sdt.aspects/pom.xml
+++ b/org.scala-ide.sdt.aspects/pom.xml
@@ -10,6 +10,7 @@
   </parent>
   <artifactId>org.scala-ide.sdt.aspects</artifactId>
   <packaging>eclipse-plugin</packaging>
+
   <dependencies>
     <dependency>
       <groupId>org.aspectj</groupId>
@@ -22,7 +23,7 @@
       <plugin>
         <groupId>org.sonatype.tycho</groupId>
         <artifactId>target-platform-configuration</artifactId>
-        <version>0.9.0-SNAPSHOT</version>
+        <version>${tycho.version}</version>
         <configuration>
           <resolver>p2</resolver>
           <pomDependencies>ignore</pomDependencies>
@@ -31,7 +32,7 @@
       <plugin>
         <groupId>org.sonatype.tycho</groupId>
         <artifactId>maven-osgi-compiler-plugin</artifactId>
-        <version>0.9.0-SNAPSHOT</version>
+        <version>${tycho.version}</version>
         <configuration>
           <excludeResources>
             <exludeResource>**/*.aj</exludeResource>
