--- a/org.scala-ide.sdt.core/pom.xml
+++ b/org.scala-ide.sdt.core/pom.xml
@@ -32,7 +32,7 @@
       <plugin>
         <groupId>org.sonatype.tycho</groupId>
         <artifactId>target-platform-configuration</artifactId>
-        <version>0.9.0-SNAPSHOT</version>
+        <version>${tycho.version}</version>
         <configuration>
           <resolver>p2</resolver>
           <pomDependencies>consider</pomDependencies>
@@ -41,7 +41,7 @@
       <plugin>
         <groupId>org.sonatype.tycho</groupId>
         <artifactId>maven-osgi-compiler-plugin</artifactId>
-        <version>0.9.0-SNAPSHOT</version>
+        <version>${tycho.version}</version>
         <configuration>
           <excludeResources>
             <excludeResource>**/*.scala</excludeResource>
