Update Scala IDs for Eclipse
Adapt the Scala nature, builder and classpath container ids in the Eclipse
project files. Importing the projects in Eclipse should now work.

--- a/org.scala-ide.scala.compiler/.project
+++ b/org.scala-ide.scala.compiler/.project
@@ -16,7 +16,7 @@
 	</buildSpec>
 	<natures>
 		<nature>org.eclipse.pde.PluginNature</nature>
-		<nature>ch.epfl.lamp.sdt.core.scalanature</nature>
+		<nature>org.scala-ide.sdt.core.scalanature</nature>
 		<nature>org.eclipse.jdt.core.javanature</nature>
 	</natures>
 </projectDescription>
