Added ch.epfl.lamp.sdt.core fragment for backwards compatibility with old nature, builder and classpath container ids.

--- a/org.scala-ide.build/pom.xml
+++ b/org.scala-ide.build/pom.xml
@@ -18,6 +18,7 @@
   </properties>
 
   <modules>
+    <module>../ch.epfl.lamp.sdt.core</module>
     <module>../org.scala-ide.sdt.weaving.feature</module>
     <module>../org.scala-ide.sdt.aspects</module>
     <module>../org.scala-ide.sdt.core</module>
